tests/integration_rust/snapshots/integration_rust__add_tests__add_plain_ssh_url.snap
---
source: tests/integration_rust/add_tests.rs
expression: pixi.project().unwrap().manifest().source.to_string()
---
[project]
name = "test-channel-change"
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64"]
preview = ['pixi-build']

[dependencies]
boost-check = { git = "git+ssh://git@github.com/wolfv/pixi-build-examples.git" }
